--- a/forum/index.html
+++ b/forum/index.html
@@ -12,8 +12,9 @@ title: Forum |
 	<br>
 	<p>A few things to keep in mind when leaving a comment on this website:</p>
 	<br>
-	<p>1. Please be respectful. <br>
-		2. Before making suggestions please check if it's already been added by using the search bar in the navigation panel or entering a URL in your browser's address bar in the following format: <em>https://agdb.smugcroc.com/#(Game Title)</em>. Replace <em>(Game Title)</em> with the title of the game with all spaces and capitals.</p>
+	<p> 1. Please be respectful. <br>
+		2. Before making suggestions please check if it's already been added by using the search bar in the navigation panel or entering a URL in your browser's address bar in the following format: <em>https://agdb.smugcroc.com/#(Game Title)</em>. Replace <em>(Game Title)</em> with the title of the game with all spaces and capitals.<br>
+		3. To make a suggestion, tell me the title of the game, your name, and your Twitter or website URL to credit you as a suggester on the game entry!</p>
 
 <div id="comments">
           <hr></hr>
