--- a/platform/index.html
+++ b/platform/index.html
@@ -5,7 +5,7 @@ title: By Platform |
 
 <h1>All Platforms</h1>
 
-<h2 id="Android">All Games on Android</h2>
+<h2 id="android">All Games on Android</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Android" %}
@@ -14,7 +14,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="GameCube">All Games on GameCube</h2>
+<h2 id="gamecube">All Games on GameCube</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "GameCube" %}
@@ -23,7 +23,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="iOS">All Games on iOS</h2>
+<h2 id="ios">All Games on iOS</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "iOS" %}
@@ -32,7 +32,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="iQue Player">All Games on iQue Player</h2>
+<h2 id="iqueplayer">All Games on iQue Player</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "iQue Player" %}
@@ -41,7 +41,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Linux">All Games on Linux</h2>
+<h2 id="linux">All Games on Linux</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Linux" %}
@@ -50,7 +50,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="macOS">All Games on macOS</h2>
+<h2 id="macos">All Games on macOS</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "macOS" %}
@@ -59,7 +59,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Nintendo 3DS">All Games on Nintendo 3DS</h2>
+<h2 id="nintendo3ds">All Games on Nintendo 3DS</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Nintendo 3DS" %}
@@ -68,7 +68,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Nintendo 64">All Games on Nintendo 64</h2>
+<h2 id="nintendo64">All Games on Nintendo 64</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Nintendo 64" %}
@@ -77,7 +77,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Nintendo DS">All Games on Nintendo DS</h2>
+<h2 id="nintendods">All Games on Nintendo DS</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Nintendo DS" %}
@@ -86,7 +86,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Nintendo Switch">All Games on Nintendo Switch</h2>
+<h2 id="nintendoswitch">All Games on Nintendo Switch</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Nintendo Switch" %}
@@ -95,7 +95,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="PlayStation 1">All Games on PlayStation 1</h2>
+<h2 id="playstation1">All Games on PlayStation 1</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "PlayStation 1" %}
@@ -104,7 +104,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="PlayStation 2">All Games on PlayStation 2</h2>
+<h2 id="playstation2">All Games on PlayStation 2</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "PlayStation 2" %}
@@ -113,7 +113,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="PlayStation 3">All Games on PlayStation 3</h2>
+<h2 id="playstation3">All Games on PlayStation 3</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "PlayStation 3" %}
@@ -122,7 +122,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="PlayStation 4">All Games on PlayStation 4</h2>
+<h2 id="playstation4">All Games on PlayStation 4</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "PlayStation 4" %}
@@ -131,7 +131,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Wii">All Games on Wii</h2>
+<h2 id="wii">All Games on Wii</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Wii" %}
@@ -140,7 +140,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Wii U">All Games on Wii U</h2>
+<h2 id="wiiu">All Games on Wii U</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Wii U" %}
@@ -149,7 +149,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Windows">All Games on Windows</h2>
+<h2 id="windows">All Games on Windows</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Windows" %}
@@ -158,7 +158,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Xbox">All Games on Xbox</h2>
+<h2 id="xbox">All Games on Xbox</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Xbox" %}
@@ -167,7 +167,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Xbox 360">All Games on Xbox 360</h2>
+<h2 id="xbox360">All Games on Xbox 360</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Xbox 360" %}
@@ -176,7 +176,7 @@ title: By Platform |
 {% endfor %}
 {% endfor %}
 
-<h2 id="Xbox One">All Games on Xbox One</h2>
+<h2 id="xboxone">All Games on Xbox One</h2>
 {% for post in site.posts %}
 {% for tags in post.platform %}
 {% if tags == "Xbox One" %}
