Added some genres

--- a/genre/index.html
+++ b/genre/index.html
@@ -50,10 +50,28 @@ title: By Genre |
 {% endfor %}
 {% endfor %}
 
+<h2 id="party">All Party Games</h2>
+{% for post in site.posts %}
+{% for tags in post.genre %}
+{% if tags == "party" %}
+{% include post_preview.html %}
+{% endif %}
+{% endfor %}
+{% endfor %}
+
 <h2 id="platformer">All Platformer Games</h2>
 {% for post in site.posts %}
 {% for tags in post.genre %}
 {% if tags == "platformer" %}
+{% include post_preview.html %}
+{% endif %}
+{% endfor %}
+{% endfor %}
+
+<h2 id="puzzle">All Puzzle Games</h2>
+{% for post in site.posts %}
+{% for tags in post.genre %}
+{% if tags == "puzzle" %}
 {% include post_preview.html %}
 {% endif %}
 {% endfor %}
