--- a/species/index.html
+++ b/species/index.html
@@ -5,6 +5,15 @@ title: By Species |
 
 <h1>All Species</h1>
 
+<h2 id="bigcat">All Games with Big Cats</h2>
+{% for post in site.posts %}
+{% for tags in post.species %}
+{% if tags == "big cat" %}
+{% include post_preview.html %}
+{% endif %}
+{% endfor %}
+{% endfor %}
+
 <h2 id="bird">All Games with Birds</h2>
 {% for post in site.posts %}
 {% for tags in post.species %}
