--- a/forum/index.html
+++ b/forum/index.html
@@ -16,34 +16,10 @@ title: Forum |
 		2. Before making suggestions please check if it's already been added by using the search bar in the navigation panel or entering a URL in your browser's address bar in the following format: <em>https://agdb.smugcroc.com/#(gametitle)</em>. Replace <em>(gametitle)</em> with the title of the game in all lower case and with no spaces.<br>
 		3. To make a suggestion, tell me the title of the game, your name, and your Twitter or website URL to credit you as a suggester on the game entry!</p>
 
-<div id="comments">
-          <hr></hr>
-          {% if page.comments %}
-          <div id="disqus_thread"></div>
-          <script>
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://animal-games-database.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-{% endif %}
+{% include disqus_comments.html %}
+
 </div>
 </div>
 
 
-</div>
-
-
-<script id="dsq-count-scr" src="//animal-games-database.disqus.com/count.js" async></script>  
+<script id="dsq-count-scr" src="//{{ site.disqus.shortname }}.disqus.com/count.js" async></script>  
