--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ title: About |
 
 <p class="excerpt">
 
-This website was made to record all video games in which animals are important to the plot or gameplay. I'm hoping people who are interested in games feauturing animals will be able to discover new games or get some quick facts on their favorites.
+This website was made to record all video games in which animals are important to the plot or gameplay. I'm hoping people who are interested in games feauturing animals will be able to discover new games or get some quick facts on their favorites. This database will not include games where the animal is simply the mascot whose species has no importance in the gameplay. In other words, this database will only accept "animal simulator" games.
 
 </p>
 
@@ -20,7 +20,7 @@ This website was made to record all video games in which animals are important t
 
 <p class="excerpt">
 
-I just like animals and video games! And, I hope that you do too since you're here. I wanted to make this information more easy to share with others because it can be frustrating and time-consuming using Google to look for games that fit specific criteria that I have in mind. A lot of times really interesting obscure and niche games go unnoticed because they don't rank well on that popular search engine.
+I just like animals and video games! And, I hope that you do too since you're here. I think games with realistic mechanics make for an interesting escape that allows us to learn more about animals and how cool they are. I wanted to make this information more easy to share with others because it can be frustrating and time-consuming using Google to look for games that fit specific criteria that I have in mind. A lot of times really interesting obscure and niche games go unnoticed because they don't rank well on that popular search engine.
 
 </p>
 
