--- a/about/index.html
+++ b/about/index.html
@@ -34,6 +34,6 @@ The "forum" page on this website lets you comment on this website. I would appre
 
 <p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/byliz/animal-games-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
 
-<p class="excerpt">This website takes a lot of time to update, so if you like it I would appreciate any support on my <a href="https://ko-fi.com/D1D4LRT2" target="_blank">Ko-fi</a>. Also, if you like my work, please consider hiring me to make your website. If you're a content creator, you may consider using my referral link to get 10% off Ko-fi Gold for life: <a href="https://ko-fi.com/gold?a=D1D4LRT2" target="_blank">https://ko-fi.com/gold?a=D1D4LRT2</a></p>
+<p class="excerpt">This website takes a lot of time to update, so if you like it, please consider hiring me to make your website. :)</p>
 
 </div>
