--- a/about/index.html
+++ b/about/index.html
@@ -32,8 +32,8 @@ The "forum" page on this website lets you comment on this website. I would appre
 
 <h3>How it Works</h3>
 
-<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/byliz/animal-games-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
+<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/animal-games-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
 
-<p class="excerpt">This website takes a lot of time to update, so if you like it, please consider hiring me to make your website. :)</p>
+<p class="excerpt">This website takes a lot of time to update, so if you like it, please consider supporting me on <a href="http://ko-fi.com/cozymaus" target="_blank">Ko-Fi</a>. :)</p>
 
 </div>
