--- a/about/index.html
+++ b/about/index.html
@@ -46,5 +46,5 @@ The "forum" page on this website lets you comment on this website. I would appre
 
 <p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
 
-<p class="excerpt">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can donate on <a href="https://paypal.me/cozymaus">PayPal.me</a>.</p>
+<p class="excerpt">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can donate on <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me</a>.</p>
 </div>
