--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: About |
 
 <p class="excerpt">
 
-<em>Kemono</em> is the Japanese word for "animal" or "beast" and refers to anthropomorphic animal characters - animal characters with human characteristics such as talking and walking on two legs. <em>Kemonomimi</em> means "animal ears" and refers to zoomorphic human characters - human characters with animal traits such as animal ears and tails. <em>Kemono</em> differs from western anthropomorphic characters in that they tend to have larger eyes, shorter snouts, and just overall look more similar to human anime characters than realistic depictions of animals.
+<em>Kemono</em> is the Japanese word for "animal" or "beast" and refers to anthropomorphic animal characters - animal characters with human characteristics such as talking and walking on two legs. <em>Kemonomimi</em> means "animal ears" and refers to zoomorphic human characters - human characters with animal traits such as animal ears and tails. <em>Kemono</em> differ from western anthropomorphic characters in that they usually follow the "cute" and "cool" trends of anime or manga art styles including large eyes and short snouts, giving them a stylized form that is closer to human than animal. Because anthropomorphism is a spectrum, animal characters in games featured on this website can range from almost completely human (people with cat ears) to almost completely non-human (cats who communicate or think using human language).
   
 </p>  
   
