--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@ This website was originally made to record all video games in which animals are 
 
 <p class="excerpt">
 
-Compared to western art styles, I prefer the way the Japanese design their animal characters. I feel like the furry community gives animal characters a bad wrap, but I wanted to expose people to the more aesthetically pleasing <em>kemono</em> characters in Japanese entertainment. I also wanted to make it more easy to find and share games, anime, and manga in this particular niche. A lot of times really interesting media goes unnoticed because of the language barrier or because they don't rank well on popular search engines.
+Compared to western art styles, I prefer the Japanese anime art style. I feel like some people have acquired an aversion to animal characters because of the western furry community, so I wanted to expose people to the Japanese varient which has crossover with the more openly accepted anime and manga community. I also wanted to make it more easy to find and share games in this particular niche. A lot of times really interesting things go unnoticed because of the language barrier or because they don't rank well on popular search engines.
 
 </p>
 
