--- a/about/index.html
+++ b/about/index.html
@@ -30,21 +30,17 @@ This website was originally made to record all video games in which animals are 
 
 <p class="excerpt">
 
-Compared to western art styles, I prefer the Japanese anime art style. I feel like some people have acquired an aversion to animal characters because of the western furry community, so I wanted to expose people to the Japanese varient which has crossover with the more openly accepted anime and manga community. I also wanted to make it more easy to find and share games in this particular niche. A lot of times really interesting things go unnoticed because of the language barrier or because they don't rank well on popular search engines.
-
-</p>
-
-  
-<h3>Contributions</h3>
-
-<p class="excerpt">
-The "forum" page on this website lets you comment on this website. I would appreciate being alerted on there of any bugs you find and any game suggestions you have. To make a suggestion, tell me the title of the game, your name, and your Twitter or website URL to credit you as a suggester on the game entry! I will be creating a Google form for this soon.
-</p>
-
+Compared to western art styles, I prefer the Japanese anime art style. I feel like some people have acquired an aversion to animal characters because of the western furry community, so I wanted to expose people to the Japanese varient which has crossover with the more openly accepted anime and manga community. I also wanted to make it more easy to find and share games in this particular niche. A lot of times really interesting things go unnoticed because of the language barrier or because they don't rank well on popular search engines.</p>
   
 <h3>How it Works</h3>
 
 <p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
+  
+<h3>Contributions</h3>
 
-<p class="excerpt">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can donate on <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me</a>.</p>
+<p class="excerpt">
+The Contributions tab on this website's navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
+</p>
+  
+<p class="excerpt">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
 </div>
