--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@ Compared to western art styles, I prefer the Japanese anime art style. I feel li
 <h3>Contributions</h3>
 
 <p class="excerpt">
-The Contributions tab on this website's navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
+The Contribute button on the navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
 </p>
   
 <p class="excerpt">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/cozymaus" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://paypal.me/cozymaus" target="_blank">PayPal.me/cozymaus</a>.</p>
