--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@ Compared to western art styles, I prefer the Japanese anime art style. I feel li
   
 <h3>How it Works</h3>
 
-<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator.</p>
+<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
   
 <h3>Contributions</h3>
 
