--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title:
 excerpt: "All games sorted by latest release."
 ---
 
-<h1>🐾 All Video Games Featuring Animals</h1>
+<h1>🐾 All Video Games Featuring Dragons</h1>
 
 {% for post in site.posts %}
 
