--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ excerpt: "All games sorted by latest release."
               {% else %}
               <div></div>
             {% endcase %}
-            </a>-->
+            </a>
 
             <a href="#" class="calendar">
-<div class="date">📅 {{ post.date | date: '%B %d, %Y' }}</div></a>
+<div class="date">📅 {{ post.date | date: '%B %d, %Y' }}</div></a>-->
 
-<a href="https://cozymaus.com/pink-box/{{ post.url }}" class="link">
-                <span class="title">{{ post.title }}</span> <br> <span class="excerpt">{{ post.summary }}</span>
+<a href="{{ post.url }}" class="link">
+                <span class="title">{{ post.title }}</span> <br> <span class="excerpt">{{ post.excerpt }}</span>
             </a>
 
               <!--<div class="excerpt"><p>{{ post.excerpt }}</p></div>-->
