--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@ excerpt: "All games sorted by latest release."
 
 <a href="{{ post.url }}" class="link">
                 <span class="title">{{ post.title }}</span> <br> <span class="excerpt">{{ post.excerpt }}</span>
+            
+            {% include post_preview.html %}
+
             </a>
 
               <!--<div class="excerpt"><p>{{ post.excerpt }}</p></div>-->
