--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ excerpt: "All games sorted by latest release."
          
 
 <a href="{{ post.url }}" class="link">
-                <span class="title">{{ post.title }}</span> <br> <span class="excerpt">{{ post.excerpt }}</span>
+                <span class="title">{{ post.title }}</span> <br> 
             
             {% include post_preview.html %}
 
