--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@ excerpt: "All games sorted by latest release."
 
 <a href="{{ post.url }}" class="link">
                 <span class="title">{{ post.title }}</span> <br> 
-            
-            {% include post_preview.html %}
+            <span class="excerpt">{{ post.excerpt }}</span>
 
             </a>
 
