--- a/index.html
+++ b/index.html
@@ -5,22 +5,9 @@ excerpt: "All games sorted by latest release."
 ---
 
 <div>
-<p style="font-size:13pt;">📬 Total Entries: <strong><span>
-
-
-            {% assign counter = 0 %}
-            {% for post in site.posts %}      
-
-            {% if post.relevant != "no" %}
-            {% assign counter = counter | plus: 1 %}
-            {% endif %}
-            
-            {% endfor %}
-            {{ counter }}
-
-
-        </span></strong></p>
+<p style="font-size:13pt;">🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
 </div>
+
 <br>
 
 <div id="posts">
