--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ excerpt: "All games sorted by latest release."
 
 <a href="{{ post.url }}" class="link">
                 <span class="title">{{ post.title }}</span> <br> 
-            <span class="excerpt">{{ post.excerpt }}</span>
+            <span class="excerpt">{{ post.excerpt | truncatewords: 3, "..." }}</span>
 
             </a>
 
