--- a/about/index.html
+++ b/about/index.html
@@ -20,13 +20,13 @@ This website was originally made to record all video games in which animals are 
 
 <p>
 
-  Dragons are cool. They exist in the stories of many cultures all around the world. There's a wide variety of them, and they're everywhere, yet I think there aren't enough dragons in video games. I want this website to record all of these tiles, no matter how obscure they may be, so that a wider audience can find them and enjoy them.
+  Dragons are cool. They exist in the stories of many cultures all around the world. There's a wide variety of them, and they're everywhere, yet I think there aren't enough dragons in video games. I want this website to record all of these titles, no matter how obscure they may be, so that a wider audience can find them and enjoy them.
   
 </p>
   
 <h3>How it Works</h3>
 
-<p class="excerpt">I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
+<p>I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/cozymaus/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
   
 <h3>Contributions</h3>
 
