--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ title: About |
 
 <p>
 
-This website was originally made to record all video games in which animals are important to the plot or gameplay, but I realized this topic was way too broad. This website will now record only games featuring dragons.
+This website was originally made to record all video games in which animals are important to the plot or gameplay, but I realized this topic was way too broad. This website will now record only games featuring playable non-human animal characters including mythical animals like dragons.
   
 </p>
 
@@ -20,7 +20,7 @@ This website was originally made to record all video games in which animals are 
 
 <p>
 
-  Dragons are cool. They exist in the stories of many cultures all around the world. There's a wide variety of them, and they're everywhere, yet I think there aren't enough dragons in video games. I want this website to record all of these titles, no matter how obscure they may be, so that a wider audience can find them and enjoy them.
+  Animals are cool. They're in so many games, but they're often not the playable character or are represented in a not very realistic manner. I love games where the animal's species is actually relevant to their abilities. I want this website to record all of these titles, no matter how obscure they may be, so that a wider audience can find them and enjoy them.
   
 </p>
   
