--- a/about/index.html
+++ b/about/index.html
@@ -34,4 +34,4 @@ This website was originally made to record all video games in which animals are 
 The Contribute button on the navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
 </p>
   
-<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/lizberberena" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/cozymaus" target="_blank">Ko-fi.com/cozymaus</a>.</p>
+<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/lizberberena" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/lizberberena" target="_blank">Ko-fi.com/lizberberena</a>.</p>
