--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@ This website was originally made to record all video games in which animals are 
   
 <h3>How it Works</h3>
 
-<p>I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/lizberberena/kemono-database" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
+<p>I made this website by hand from scratch and use <a href="https://pages.github.com/" target="_blank">Github Pages</a> to host it. You can check out the source code <a href="http://github.com/liz-lorena/animals" target="_blank">here</a>. This website is a static website generated using the <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> static site generator. Entries must be manually added as a markup file in the _posts folder.</p>
   
 <h3>Contributions</h3>
 
@@ -34,4 +34,3 @@ This website was originally made to record all video games in which animals are 
 The Contribute button on the navigation menu goes to an external Google Form where you can submit any suggestions for games that you think should be listed.
 </p>
   
-<p>If you found this website useful and enjoy my work, feel free to share it with others. You can also help by donating at <a href="https://ko-fi.com/lizlorena" target="_blank">Ko-fi.com/lizlorena</a>.</p>
